--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/styled-engine-sc": "^6.4.0",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "minecraft-server-util": "^5.4.4",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
